Moved to V2 data contract. Writing to blob with device ids, dates, etc for filtering and querying ease.
